--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jira-app"
+name = "jira_app"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -17,6 +17,7 @@ tauri-build = { version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["shell-open"] }
+toml = "0.5"
 
 [features]
 # by default Tauri runs in production mode
